codepkg/objects/Pre_Application__c.object
<CustomObject>
    <fields>
        <fullName>Project_related_to_asset__c</fullName>
        <inlineHelpText>Hazard Mitigation Assistance funds are not to be used for the sole purpose of repair, replacement, or maintenance of an asset. The funds must increase the level of protection.</inlineHelpText>
        <label>Project related to asset?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_project_area_documented__c</fullName>
        <inlineHelpText>Significant damages are those which have caused damage physical or financial damage to a structure, facility or infrastructure.</inlineHelpText>
        <label>Proposed project area documented</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Protection_From_Future_Natural_Hazards__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Describe how the proposed action will reduce or eliminate damage or risk to life and property, include information on the level of protection the project will provide if designed to a specific standard (For example, 6.0 earthquake, 100-year flood, etc.)</inlineHelpText>
        <label>Protection From Future Natural Hazards</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Protection_for_that_asset__c</fullName>
        <label>Protection for that asset?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RFI_Deadline__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RFI Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>County__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Coastal</fullName>
                </value>
                <value>
                    <fullName>Inland</fullName>
                </value>
                <value>
                    <fullName>Southern</fullName>
                </value>
                <value>
                    <fullName>Statewide</fullName>
                </value>
                <value>
                    <fullName>Multi-County</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Pre-Applications</relationshipLabel>
        <relationshipName>Pre_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responsible_Representative_Name__c</fullName>
        <formula>Responsible_Representative__r.FirstName + &apos; &apos; + Responsible_Representative__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Responsible Representative Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible Representative</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Pre-Applications (Responsible Representative)</relationshipLabel>
        <relationshipName>Pre_Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Review_Deadline__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Review Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source_of_applicant_match__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Contributions of cash and donated resources, or any combination thereof, can be used for the subapplicant match. For example, cash and in-kind contributions of services and labor, volunteer labor, and Community Development Block Grant Discover Recovery (C</inlineHelpText>
        <label>Source of subapplicant match</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State_Abbreviation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <label>Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NOI Approved</fullName>
                </value>
                <value>
                    <fullName>Approved for Future Consideration</fullName>
                </value>
                <value>
                    <fullName>Ineligible Sub-applicant</fullName>
                </value>
                <value>
                    <fullName>Ineligible Activity</fullName>
                </value>
                <value>
                    <fullName>Ineligible Sub-applicant &amp; Activity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Pending Review</fullName>
                </value>
                <value>
                    <fullName>Analyst Review</fullName>
                </value>
                <value>
                    <fullName>Request for Information</fullName>
                </value>
                <value>
                    <fullName>Manager Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending Manager Review</fullName>
                    <isActive>false</isActive>
                    <label>Pending Manager Review</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Structures_included_in_subapplication__c</fullName>
        <inlineHelpText>For BRIC projects, if the project is located in a SFHA, the property owner must obtain and maintain flood insurance for the life of the structure, regardless of transfer of ownership, in an amount at least equal to the project cost or to the maximum limit</inlineHelpText>
        <label>Structures included in subapplication</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Applicant_Eligible__c</fullName>
        <label>Sub-Applicant Eligible</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Application_Due_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sub-Application Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subapplicant_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subapplicant Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pre-Applications</relationshipLabel>
        <relationshipName>Pre_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subapplicant_a_small_community__c</fullName>
        <description>A small impoverished community is defined as community of 3,000 or fewer individuals that is economically disadvantaged, with residents having an average per capita annual income not exceeding 80 percent of the national per capita income.</description>
        <label>Subapplicant a small community?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subapplicant_for_infrastructure__c</fullName>
        <inlineHelpText>For example, does the subapplicant have full authority and ownership of the infrastructure to perform the proposed project?</inlineHelpText>
        <label>Subapplicant for infrastructure?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subapplication_for_project_submitted__c</fullName>
        <inlineHelpText>Indicate if a full subapplication for the project/plan has been submitted to OES under another disaster for Hazard Mitigation Grant Program (HMGP), HMGP Post Fire, Building Resilient Infrastructure and Communities (BRIC), Pre-Disaster Mitigation (PDM), or</inlineHelpText>
        <label>Subapplication for project submitted?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Activity_Cost__c</fullName>
        <inlineHelpText>Enter the total cost to implement the project. Inclusive of both Federal share and local match.</inlineHelpText>
        <label>Total Activity Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>What_is_the_mitigation_action__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Describe in detail the proposed mitigation action and how it will mitigate the problem. The description should include the proposed approach and expected mitigation outcome(s).</inlineHelpText>
        <label>What is the mitigation action?</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Work_started_completed_in_detail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Work started/completed in detail</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Pre-Application</label>
    <listViews>
        <fullName>BRIC_NOI_Pending_Review</fullName>
        <columns>NAME</columns>
        <columns>HMA_Program__c</columns>
        <columns>Activity_TitleName__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Application_Type__c</columns>
        <columns>Applicant_Name_Entity__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Reason__c</columns>
        <columns>Region__c</columns>
        <columns>Review_Deadline__c</columns>
        <columns>Federal_Request_Share__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending Review</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Pre_Application__c.BRIC</value>
        </filters>
        <label>BRIC NOI - Pending Review</label>
        <queue>HMA_NOI_Pending_Review</queue>
    </listViews>
    <listViews>
        <fullName>BRIC_NOIs</fullName>
        <columns>NAME</columns>
        <columns>HMA_Program__c</columns>
        <columns>Activity_TitleName__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Application_Type__c</columns>
        <columns>Applicant_Name_Entity__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Reason__c</columns>
        <columns>Region__c</columns>
        <columns>Review_Deadline__c</columns>
        <columns>Federal_Request_Share__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Pre_Application__c.BRIC</value>
        </filters>
        <label>BRIC NOIs - All</label>
        <sharedTo>
            <role>HMA_Analyst</role>
            <role>HMA_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FMA_NOI_Pending_Review</fullName>
        <columns>NAME</columns>
        <columns>HMA_Program__c</columns>
        <columns>Activity_TitleName__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Application_Type__c</columns>
        <columns>Applicant_Name_Entity__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Reason__c</columns>
        <columns>Region__c</columns>
        <columns>Review_Deadline__c</columns>
        <columns>Federal_Request_Share__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending Review</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Pre_Application__c.FMA</value>
        </filters>
        <label>FMA NOI - Pending Review</label>
        <queue>HMA_NOI_Pending_Review</queue>
    </listViews>
    <listViews>
        <fullName>FMA_NOIs</fullName>
        <columns>NAME</columns>
        <columns>HMA_Program__c</columns>
        <columns>Activity_TitleName__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Application_Type__c</columns>
        <columns>Applicant_Name_Entity__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Reason__c</columns>
        <columns>Region__c</columns>
        <columns>Review_Deadline__c</columns>
        <columns>Federal_Request_Share__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Pre_Application__c.FMA</value>
        </filters>
        <label>FMA NOIs - All</label>
        <sharedTo>
            <role>HMA_Analyst</role>
            <role>HMA_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HMA_NOI_Analyst_Review</fullName>
        <columns>NAME</columns>
        <columns>HMA_Program__c</columns>
        <columns>Activity_TitleName__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Application_Type__c</columns>
        <columns>Applicant_Name_Entity__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Reason__c</columns>
        <columns>Region__c</columns>
        <columns>Review_Deadline__c</columns>
        <columns>Federal_Request_Share__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Analyst Review</value>
        </filters>
        <label>HMA NOI - Analyst Review</label>
        <sharedTo>
            <role>HMA_Analyst</role>
            <role>HMA_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HMA_NOI_Approved_NOIs</fullName>
        <columns>NAME</columns>
        <columns>HMA_Program__c</columns>
        <columns>Activity_TitleName__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Application_Type__c</columns>
        <columns>Applicant_Name_Entity__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Reason__c</columns>
        <columns>Region__c</columns>
        <columns>Federal_Request_Share__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>HMA NOI - Approved NOIs</label>
        <sharedTo>
            <role>HMA_Analyst</role>
            <role>HMA_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HMA_NOI_Manager_Review</fullName>
        <columns>NAME</columns>
        <columns>HMA_Program__c</columns>
        <columns>Activity_TitleName__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Application_Type__c</columns>
        <columns>Applicant_Name_Entity__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Reason__c</columns>
        <columns>Region__c</columns>
        <columns>Review_Deadline__c</columns>
        <columns>Federal_Request_Share__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Manager Review</value>
        </filters>
        <label>HMA NOI - Manager Review</label>
        <sharedTo>
            <role>HMA_Analyst</role>
            <role>HMA_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HMA_NOI_Pending_Review</fullName>
        <columns>NAME</columns>
        <columns>HMA_Program__c</columns>
        <columns>Activity_TitleName__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Application_Type__c</columns>
        <columns>Applicant_Name_Entity__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Reason__c</columns>
        <columns>Region__c</columns>
        <columns>Review_Deadline__c</columns>
        <columns>Federal_Request_Share__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending Review</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Pre_Application__c.HMGP</value>
        </filters>
        <label>HMGP NOI - Pending Review</label>
        <queue>HMA_NOI_Pending_Review</queue>
    </listViews>
    <listViews>
        <fullName>HMA_NOI_Rejected_NOIs</fullName>
        <columns>NAME</columns>
        <columns>HMA_Program__c</columns>
        <columns>Activity_TitleName__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Application_Type__c</columns>
        <columns>Applicant_Name_Entity__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Reason__c</columns>
        <columns>Region__c</columns>
        <columns>Federal_Request_Share__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>HMA NOI - Rejected NOIs</label>
        <sharedTo>
            <role>HMA_Analyst</role>
            <role>HMA_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HMA_NOI_Request_for_Information</fullName>
        <columns>NAME</columns>
        <columns>HMA_Program__c</columns>
        <columns>Activity_TitleName__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Application_Type__c</columns>
        <columns>Applicant_Name_Entity__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Reason__c</columns>
        <columns>Region__c</columns>
        <columns>RFI_Deadline__c</columns>
        <columns>Review_Deadline__c</columns>
        <columns>Federal_Request_Share__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Request for Information</value>
        </filters>
        <label>HMA NOI - Request for Information</label>
        <sharedTo>
            <role>HMA_Analyst</role>
            <role>HMA_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HMGP_NOIs</fullName>
        <columns>NAME</columns>
        <columns>HMA_Program__c</columns>
        <columns>Activity_TitleName__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Application_Type__c</columns>
        <columns>Applicant_Name_Entity__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Reason__c</columns>
        <columns>Region__c</columns>
        <columns>Review_Deadline__c</columns>
        <columns>Federal_Request_Share__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Pre_Application__c.HMGP</value>
        </filters>
        <label>HMGP NOIs - All</label>
        <sharedTo>
            <role>HMA_Analyst</role>
            <role>HMA_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_NOIs</fullName>
        <columns>NAME</columns>
        <columns>HMA_Program__c</columns>
        <columns>Activity_TitleName__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Application_Type__c</columns>
        <columns>Applicant_Name_Entity__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Reason__c</columns>
        <columns>Region__c</columns>
        <columns>Review_Deadline__c</columns>
        <columns>RFI_Deadline__c</columns>
        <columns>Federal_Request_Share__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My NOIs</label>
    </listViews>
    <listViews>
        <fullName>NOIs_All</fullName>
        <columns>NAME</columns>
        <columns>HMA_Program__c</columns>
        <columns>Activity_TitleName__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Application_Type__c</columns>
        <columns>Applicant_Name_Entity__c</columns>
        <columns>Status__c</columns>
        <columns>Status_Reason__c</columns>
        <columns>Region__c</columns>
        <columns>Review_Deadline__c</columns>
        <columns>Federal_Request_Share__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>NOIs - All</label>
    </listViews>
    <nameField>
        <displayFormat>PA-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pre-Applications</pluralLabel>
    <recordTypes>
        <fullName>BRIC</fullName>
        <active>true</active>
        <description>Used for BRIC NOI Forms</description>
        <label>BRIC</label>
    </recordTypes>
    <recordTypes>
        <fullName>FMA</fullName>
        <active>true</active>
        <description>Used for FMA NOI Forms</description>
        <label>FMA</label>
    </recordTypes>
    <recordTypes>
        <fullName>HMGP</fullName>
        <active>true</active>
        <description>For HMGP NOI Requests</description>
        <label>HMGP</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Disaster_Field_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
AND(
OR(
ISPICKVAL(Status__c, &apos;Approved&apos;),
ISPICKVAL(Status__c, &apos;Rejected&apos;)
),
ISBLANK(Disaster__c)
)
,
true,
false)</errorConditionFormula>
        <errorDisplayField>Disaster__c</errorDisplayField>
        <errorMessage>Please Select Disaster</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Approve_NOI_Without_Due_Date</fullName>
        <active>true</active>
        <description>Restrict Approve the NOI Without sub-Application Due Date</description>
        <errorConditionFormula>AND( RecordType.Name = &apos;HMGP&apos;,
					 IF( 
				OR(
								AND(ISPICKVAL(Status__c, &apos;Approved&apos;), ISPICKVAL(Status_Reason__c,&apos;NOI Approved&apos;), ISBLANK(Sub_Application_Due_Date__c) ),  
							 	   AND($UserRole.Name &lt;&gt; &apos;HMA Manager&apos;,  ISCHANGED(Sub_Application_Due_Date__c) ) 
				       ) , 
			    true, false)
				)</errorConditionFormula>
        <errorDisplayField>Sub_Application_Due_Date__c</errorDisplayField>
        <errorMessage>Only HMA Manager can update the Sub-Application Due Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Approve_Or_Reject</fullName>
        <active>true</active>
        <description>If Is Project Phased field value not set</description>
        <errorConditionFormula>AND( RecordType.Name = &apos;HMGP&apos;,
				IF(
				AND(
								OR(
												ISPICKVAL(Status__c, &apos;Approved&apos;),
												ISPICKVAL(Status__c, &apos;Rejected&apos;)
								),
								ISBLANK( TEXT(Is_this_project_phased__c))
			  	 ),
				   true, false)
			)</errorConditionFormula>
        <errorDisplayField>Is_this_project_phased__c</errorDisplayField>
        <errorMessage>Please Indicate whether this NOI will result in a phased Project</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Owner_Change</fullName>
        <active>true</active>
        <description>Restrict HMA Analyst User to change the Owner</description>
        <errorConditionFormula>$User.Title = &quot;HMA Analyst&quot; &amp;&amp; ISCHANGED( OwnerId )</errorConditionFormula>
        <errorMessage>Only Managers can change the owner</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Status_Change</fullName>
        <active>true</active>
        <description>Restrict status change to Approved or Rejected by HMA Analyst</description>
        <errorConditionFormula>AND( $User.Title = &quot;HMA Analyst&quot;, OR( ISPICKVAL(Status__c, &apos;Approved&apos;), ISPICKVAL(Status__c, &apos;Rejected&apos;)))</errorConditionFormula>
        <errorMessage>Only managers can approve or reject an NOI</errorMessage>
    </validationRules>
</CustomObject>